# discord_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  application.py  config.json  pyproject.toml  requirements.txt
.githooks/: commit-msg  install.sh  post-checkout  post-merge  pre-commit  pre-push  utils.sh
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build_and_push_image.yml  ci_checks.yml  dev-deploy.yml  dev_deploy.yml  ghcr_cleanup.yml  lint.yml  pr_image_build.yml  prod-deploy.yml  prod_deploy.yml  source.yml
cogs/events/: general.py
cogs/interactions/slash/: help.py  mod.py  utils.py
deploy/: README.md  deploy.env.example  deploy_gate.sh  deploy_runner.sh  docker-compose.yml
src/: .env.example  __init__.py  bot.py
src/cogs/interactions/slash/: anon.py  link.py  utils.py
src/data/: faq.json
src/utils/: config.py  general.py
utils/: config.py
