[project]
name = "pesu_discord_bot"
version = "0.1.0"
description = "Community management Discord Bot for PESU Discord server"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Sachin Balasubramanyam", email = "sachinshankar1206@gmail.com" },
]
license = { text = "MIT" }
license-files = [
    "LICENSE"
]
dependencies = [
    "discord-py==2.6.3",
    "httpx==0.28.1",
    "pymongo==4.13.2",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/pesu-dev/discord_bot"
Repository = "https://github.com/pesu-dev/discord_bot"
Issues = "https://github.com/pesu-dev/discord_bot/issues"
"Project Board" = "https://github.com/orgs/pesu-dev/projects/4/"

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # Complexity rules
    "ANN",  # Annotations rules
    "TYP",  # Type checking rules
    "Q000", # Quotation style rules
    "RET",  # Return type rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
